feat: stores done

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -32,9 +32,11 @@
                 <a href="#" class="text-xs text-center text-gray-500 uppercase">o inicia con tu correo</a>
                 <span class="border-b w-1/5 lg:w-1/4"></span>
             </div>
+            <form [formGroup]="logInForm">
             <div class="mt-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2">Dirección E-mail</label>
                 <input
+                    [formControlName]="'email'"
                     class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
                     type="email">
             </div>
@@ -44,12 +46,15 @@
                     <a href="#" class="text-xs text-gray-500">Olvidaste tu contraseña?</a>
                 </div>
                 <input
+                    [formControlName]="'password'"
                     class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
                     type="password">
             </div>
+          </form>
             <div class="mt-8">
                 <button
-                    class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Inicia sesión</button>
+                    (click)="login()"
+                    class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600" >Inicia sesión</button>
             </div>
             <div class="mt-4 flex items-center justify-between">
                 <span class="border-b w-1/5 md:w-1/4"></span>
