--- a/src/app/modules/dashboards/stores/stores.component.html
+++ b/src/app/modules/dashboards/stores/stores.component.html
@@ -36,9 +36,7 @@
 
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4 px-4 py-4">
-    <card-component></card-component>
-    <card-component></card-component>
-    <card-component></card-component>
+    <card-component *ngFor="let value of stores" [store]="value"></card-component>
 
   </div>
 
