--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -40,7 +40,7 @@
         </button>
       </ng-container>
       <ng-container>
-        <button class="bg-red-500 text-white px-4 py-2 rounded-lg w-full">
+        <button class="bg-red-500 text-white px-4 py-2 rounded-lg w-full" (click)="deleteStore()">
           ELIMINAR
         </button>
       </ng-container>
