feat: improve tailwind style to store card

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="rounded-lg overflow-hidden mx-auto py-4">
+<mat-card class="rounded-lg overflow-hidden mx-auto py-4 h-full">
   <div class="w-32 h-32 mx-auto overflow-hidden rounded-full">
     <img
       mat-card-image
