--- a/src/app/modules/dashboards/stores/stores.component.html
+++ b/src/app/modules/dashboards/stores/stores.component.html
@@ -1,7 +1,7 @@
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
 <div class="body" [ngClass]="getBodyClass()">
   <h1 class="text-xl text-gray-600">Tiendas</h1>
-  <div class="grid grid-cols-1 justify-stretch sm:grid-cols-5 gap-4">
+  <div class="grid grid-cols-1 justify-stretch sm:grid-cols-8 gap-4">
     <mat-form-field appearance="fill">
       <mat-label>Filtrar por</mat-label>
       <mat-select [(ngModel)]="selectOptionVal">
@@ -10,7 +10,7 @@
         }}</mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-form-field class="flex flex-1 col-span-3" appearance="fill">
+    <mat-form-field class="flex flex-1 col-span-6" appearance="fill">
       <mat-label>Ingresa data a buscar</mat-label>
       <input
         title="Search"
@@ -28,14 +28,14 @@
 
     <button
       (click)="openAddEditEmpForm()"
-      class="bg-green-400 justify-center text-white font-bold rounded hover:bg-green-500  flex items-center gap-2 py-4 px-4"
+      class="bg-green-400 justify-center text-white font-bold rounded hover:bg-green-500  flex items-center gap-2 py-2 px-2"
     >
       CREAR TIENDA
     </button>
   </div>
 
 
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4 px-4 py-4">
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 2xl:grid-cols-6 gap-4 px-1 py-8">
     <card-component *ngFor="let value of stores" [store]="value"></card-component>
 
   </div>
