--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,7 +11,7 @@
     store.name
   }}</mat-card-title>
   <mat-card-content class="text-left text-gray-600 break-words">
-    <div>
+    <div class="h-32">
       <h3><b>Descripcion:</b></h3>
       <p>{{ store.description }}</p>
     </div>
