--- a/src/app/modules/dashboards/stores/stores.component.html
+++ b/src/app/modules/dashboards/stores/stores.component.html
@@ -36,7 +36,7 @@
 
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 2xl:grid-cols-6 gap-4 px-1 py-8">
-    <card-component *ngFor="let value of stores" [store]="value"></card-component>
+    <card-component *ngFor="let value of stores" [store]="value" (deletedStore)="deleteStore(value)"></card-component>
 
   </div>
 
