--- a/src/app/modules/dashboards/stores/stores.component.html
+++ b/src/app/modules/dashboards/stores/stores.component.html
@@ -2,15 +2,7 @@
 <div class="body" [ngClass]="getBodyClass()">
   <h1 class="text-xl text-gray-600">Tiendas</h1>
   <div class="grid grid-cols-1 justify-stretch sm:grid-cols-8 gap-4">
-    <mat-form-field appearance="fill">
-      <mat-label>Filtrar por</mat-label>
-      <mat-select [(ngModel)]="selectOptionVal">
-        <mat-option [value]="option.id" *ngFor="let option of tempOptions">{{
-          option.name
-        }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="flex flex-1 col-span-6" appearance="fill">
+    <mat-form-field class="flex flex-1 col-span-7" appearance="fill">
       <mat-label>Ingresa data a buscar</mat-label>
       <input
         title="Search"
@@ -18,8 +10,7 @@
         [(ngModel)]="this.searchTerm"
         #filterModal
         [maxlength]="maxLengthSearch"
-        (keyup)="this.filterBy.next(searchTerm)"
-        (keydown.enter)="this.search.next()"
+        (keydown.enter)="searchStores()"
       />
       <mat-hint align="end"
         >{{ filterModal.value.length }}/{{ maxLengthSearch }}</mat-hint
@@ -28,7 +19,7 @@
 
     <button
       (click)="openAddEditEmpForm()"
-      class="bg-green-400 justify-center text-white font-bold rounded hover:bg-green-500  flex items-center gap-2 py-2 px-2"
+      class="bg-green-400 justify-center text-white font-bold rounded hover:bg-green-500  flex items-center gap-2 py-2 px-2 col-span-1"
     >
       CREAR TIENDA
     </button>
