--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -27,7 +27,7 @@
   <mat-card-actions class="justify-center mt-4">
     <div class="flex flex-col items-center gap-2 py-2">
       <ng-container>
-        <button class="bg-blue-500 text-white px-4 py-2 rounded-lg w-full mb-2">
+        <button (click)="goToStock(store.id)" class="bg-blue-500 text-white px-4 py-2 rounded-lg w-full mb-2">
           INVENTARIO
         </button>
       </ng-container>
