--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -58,7 +58,7 @@
             </div>
             <div class="mt-4 flex items-center justify-between">
                 <span class="border-b w-1/5 md:w-1/4"></span>
-                <a href="#" class="text-xs text-gray-500 uppercase">o registrate</a>
+                <a href="register" class="text-xs text-gray-500 uppercase">o registrate</a>
                 <span class="border-b w-1/5 md:w-1/4"></span>
             </div>
         </div>
