--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -34,9 +34,9 @@
             </div>
             <form [formGroup]="logInForm">
             <div class="mt-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2">Dirección E-mail</label>
+                <label class="block text-gray-700 text-sm font-bold mb-2">Username</label>
                 <input
-                    [formControlName]="'email'"
+                    [formControlName]="'userName'"
                     class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
                     type="email">
             </div>
@@ -53,7 +53,7 @@
           </form>
             <div class="mt-8">
                 <button
-                    (click)="login()"
+                    (click)="onLogin()"
                     class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600" >Inicia sesión</button>
             </div>
             <div class="mt-4 flex items-center justify-between">
