--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -90,7 +90,7 @@
             
             <div class="mt-8">
                 <button
-                    (click)="register()"
+                    (click)="onRegister()"
                     class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600" >Registrarse</button>
             </div>
             <div class="mt-4 flex items-center justify-between">
