--- a/src/app/components/stock-emp-add-edit/stock-emp-add-edit.component.html
+++ b/src/app/components/stock-emp-add-edit/stock-emp-add-edit.component.html
@@ -8,42 +8,30 @@
             <div class="row">
                 <mat-form-field appearance="fill" floatLabel="always">
                     <mat-label>ID</mat-label>
-                    <input matInput formControlName="id">
-                </mat-form-field>
-                <mat-form-field appearance="fill" floatLabel="always">
-                    <mat-label>Nombre</mat-label>
-                    <input matInput formControlName="name">
+                    <input matInput formControlName="storeId">
                 </mat-form-field>
             </div>
 
             <div class="row">
                 <mat-form-field appearance="fill" floatLabel="always">
-                    <mat-label>Categoría</mat-label>
-                    <mat-select>
-                        <mat-option value="one">First option</mat-option>
-                        <mat-option value="two">Second option</mat-option>
-                    </mat-select>
+                    <mat-label>Nombre</mat-label>
+                    <input matInput formControlName="name">
+                </mat-form-field>
+                <mat-form-field appearance="fill" floatLabel="always">
+                    <mat-label>Descripción</mat-label>
+                    <input matInput formControlName="description">
+                </mat-form-field>
+            </div>
+
+            <div class="row">
+                <mat-form-field appearance="fill" floatLabel="always">
+                    <mat-label>Cantidad</mat-label>
+                    <input matInput formControlName="amount">
                 </mat-form-field>
                 <mat-form-field appearance="fill" floatLabel="always">
                     <mat-label>Temperatura Óptima</mat-label>
                     <input matInput formControlName="temperature">
                 </mat-form-field>
-            </div>
-
-            <div class="row">
-                <mat-form-field appearance="fill" floatLabel="always">
-                    <mat-label>Fecha Ingreso</mat-label>
-                    <input matInput [matDatepicker]="picker1" formControlName="productionDate">
-                    <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-                    <mat-datepicker #picker1></mat-datepicker>
-                  </mat-form-field>
-
-                  <mat-form-field appearance="fill" floatLabel="always">
-                    <mat-label>Fecha Vencimiento</mat-label>
-                    <input matInput [matDatepicker]="picker2" formControlName="dueDate">
-                    <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-                    <mat-datepicker #picker2></mat-datepicker>
-                  </mat-form-field>
             </div>
         </div>
         <div mat-dialog-actions class="action">
