--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="py-6">
+<div class="py-6 h-full flex items-center">
   <div
-    class="flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-4xl"
+    class="flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-4xl " 
   >
     <div
       class="hidden lg:block lg:w-1/2 bg-cover"
@@ -32,9 +32,6 @@
           <div class="flex justify-between">
             <label class="block text-gray-700 text-sm font-bold mb-2"
               >Password</label
-            >
-            <a href="#" class="text-xs text-gray-500"
-              >Did you forget your password?</a
             >
           </div>
           <input
