--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="py-6">
+<div class="py-6 h-full flex items-center">
   <div
     class="flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-4xl"
   >
