--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -4,19 +4,19 @@
   </mat-card-header>
   <mat-card-content>
     <div class="content-row">
-      <h3>Nombre de Producto: <b>{{alert?.product?.name}}</b></h3>
-      <p class="icon-box-p">Id Producto: {{alert?.product?.id}}</p>
+      <h3>Product name: <b>{{alert?.product?.name}}</b></h3>
+      <p class="icon-box-p">Product Id: {{alert?.product?.id}}</p>
     </div>
     <div class="content-row">
-      <h3>Nombre de Tienda: <b>{{alert?.store?.name}}</b></h3>
-      <p class="icon-box-t">Id Tienda: {{alert?.store?.id}}</p>
+      <h3>Store name: <b>{{alert?.store?.name}}</b></h3>
+      <p class="icon-box-t">Store Id: {{alert?.store?.id}}</p>
     </div>
-    <h3>Dirección de tienda: <b>{{alert?.store?.address}}</b></h3>
+    <h3>Store direction: <b>{{alert?.store?.address}}</b></h3>
   </mat-card-content>
   <mat-divider></mat-divider>
   <mat-card-actions align="end">
     <button mat-button (click)="openDialog()">
-      RESUELTO
+      Resolve
     </button>
   </mat-card-actions>
 </mat-card>
