--- a/src/app/components/confirmDialog/confirm-dialog.component.html
+++ b/src/app/components/confirmDialog/confirm-dialog.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>Confirmar Alerta Resuelta</h2>
-<mat-dialog-content>Estás seguro que deseas resolver esta tarea?</mat-dialog-content>
+<h2 mat-dialog-title>Confirm Resolved Alert</h2>
+<mat-dialog-content>Are you sure you want to solve this task?</mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button [mat-dialog-close]="data.alert">Si</button>
   <button mat-button [mat-dialog-close]="false">No</button>
