--- a/src/app/modules/main/stores/stores.component.html
+++ b/src/app/modules/main/stores/stores.component.html
@@ -1,8 +1,8 @@
 <div class="body" [ngClass]="getBodyClass()">
-  <h1 class="text-xl text-gray-600">Tiendas</h1>
+  <h1 class="text-xl text-gray-600">Stores</h1>
   <div class="grid grid-cols-1 justify-stretch sm:grid-cols-8 gap-4">
     <mat-form-field class="flex flex-1 col-span-7" appearance="fill">
-      <mat-label>Ingresa data a buscar</mat-label>
+      <mat-label>Enter data to search</mat-label>
       <input
         title="Search"
         matInput
@@ -20,7 +20,7 @@
       (click)="openAddEditEmpForm()"
       class="bg-green-400 justify-center text-white font-bold rounded hover:bg-green-500  flex items-center gap-2 py-2 px-2 col-span-1"
     >
-      CREAR TIENDA
+      CREATE STORE
     </button>
   </div>
 
